--- a/pom.xml
+++ b/pom.xml
@@ -61,5 +61,12 @@
       <artifactId>logback-classic</artifactId>
       <version>1.5.6</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>5.13.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
